--- a/Сборник инструкций.md
+++ b/Сборник инструкций.md
@@ -8,6 +8,7 @@
 iverilog -o spi_test spi_master.v spi_master_tb.v
 
 -o spi_test — указываем имя выходного файла (исполняемый файл симуляции).
+spi_test (название симуляции)
 
 2. vvp spi_test
 
